style guide updates

--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -50,6 +50,7 @@
             <li><a href="#colors">Color Palette</a></li>
             <li><a href="#cards">Cards</a></li>
             <li><a href="#navigation">Navigation</a></li>
+            <li><a href="#grid">Grid System</a></li>
             <li><a href="#tables">Tables</a></li>
             <li><a href="#figures">Figures</a></li>
             <li><a href="#figures">Forms</a></li>
@@ -273,20 +274,204 @@
     <h3 style="margin-left: 1rem;">GRID SYSTEM</h3>
     <hr>
     <br />
-    <div class="grid">
-        <div class="col-xs-12 form-control">
-            <div class="card-light">
-                <h4>12</h4>
+    <div class="card-light">
+        <h4 class="title"><b>Basic Grid</b></h4>
+        <div class="grid gap">
+            <div class="col-xs-12">
+                <div class="card-light">
+                    <h4>12</h4>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="card-light">
+                    <h4>6</h4>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="card-light">
+                    <h4>6</h4>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card-light">
+                    <h4>4</h4>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card-light">
+                    <h4>4</h4>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card-light">
+                    <h4>4</h4>
+                </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="card-light">
+                    <h4>3</h4>
+                </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="card-light">
+                    <h4>3</h4>
+                </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="card-light">
+                    <h4>3</h4>
+                </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="card-light">
+                    <h4>3</h4>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
+            </div>
+            <div class="col-xs-1">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
             </div>
         </div>
-        <div class="col-xs-6 form-control">
-            <div class="card-light">
-                <h4>6</h4>
+    </div>
+    <br />
+    <div class="card-light">
+        <h4 class="title"><b>Responsive Grid</b></h4>
+        <div class="grid gap">
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
+                <div class="card-light">
+                    <h4>1</h4>
+                </div>
             </div>
-        </div>
-        <div class="col-xs-6 form-control">
-            <div class="card-light">
-                <h4>6</h4>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6">
+                <div class="card-light">
+                    <h4>2</h4>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2">
+                <div class="card-light">
+                    <h4>3</h4>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-5 col-lg-8">
+                <div class="card-light">
+                    <h4>4</h4>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-2">
+                <div class="card-light">
+                    <h4>5</h4>
+                </div>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-3">
+                <div class="card-light">
+                    <h4>6</h4>
+                </div>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-7 col-lg-2">
+                <div class="card-light">
+                    <h4>7</h4>
+                </div>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-1 col-lg-4">
+                <div class="card-light">
+                    <h4>8</h4>
+                </div>
+            </div>
+            <div class="col-xs-5 col-sm-5 col-md-2 col-lg-1">
+                <div class="card-light">
+                    <h4>9</h4>
+                </div>
+            </div>
+            <div class="col-xs-7 col-sm-7 col-md-12 col-lg-2">
+                <div class="card-light">
+                    <h4>10</h4>
+                </div>
             </div>
         </div>
     </div>
