--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -911,6 +911,57 @@
 </div>
 
 
+<!-- *** PRODUCT PAGE *** -->
+<div class="container" id="product">
+    <hr>
+    <h3 style="margin-left: 1rem;">PRODUCT PAGE</h3>
+    <hr>
+    <br />
+    <div class="grid gap">
+        <div class="col-xs-6" style="text-align: center;">
+            <img src="../img/AW-Product_Image-TEST.jpg"
+                 alt="Kids Product Image"
+                 title="Kids Product Image" />
+        </div>
+        <div class="col-xs-6 product-text">
+            <h3>Product Name</h3>
+            <h4><b>&dollar;00.00</b></h4>
+            <p>
+                Product Description copy goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Mauris non interdum erat. Quisque ut euismod lorem. Aliquam ac condimentum dui. 
+                Nullam purus elit, semper id suscipit non, tincidunt eget justo.
+            </p>
+            <br />
+            <h5>Size</h5>
+            <div class="form-select form-control" style="width: 6rem;">
+                <select>
+                    <option>XS</option>
+                    <option>SM</option>
+                    <option>MD</option>
+                    <option>LG</option>
+                    <option>XL</option>
+                    <option>2X</option>
+                </select>
+            </div>
+            <br />
+            <h5>Quantity</h5>
+            <div class="form-select form-control" style="width: 6rem;">
+                <select>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                </select>
+            </div>
+            <br />
+            <button class="dark">Add to Cart</button>
+        </div>
+    </div>
+</div>
+
+
 <!-- ** BACK TO TOP ** -->
 <div class="container">
     <a href="#top"><button class="dark">Back to Top&nbsp;&uarr;</button></a>
