--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -64,6 +64,7 @@
             <li><a href="#notify">Notifications</a></li>
             <li><a href="#hero">Product Hero Banner</a></li>
             <li><a href="#callout">Callout Banner</a></li>
+            <li><a href="#product">Product Page</a></li>
         </ul>
     </div>
 </div>
