--- a/chipman.abigail/styleguide/index.html
+++ b/chipman.abigail/styleguide/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,9 +19,9 @@
 
 <body>
     <header class="navbar">
-        <div class="container display-flex">
+        <div class="container display-flex flex-align-center flex-justify-center">
             <div class="flex-none">
-                <h1>abbydazzled.com Styleguide</h1>
+                <img src="../img/logoColorNav.png" alt="AbbyDazzled Logo" class="logo">
             </div>
             <div class="flex-stretch"></div>
             <nav class="flex-none nav">
@@ -51,6 +51,7 @@
                         </ul>
                     </li>
                     <li><a href="#colors">Colors</a></li>
+                    <li><a href="#view-window">View Windows</a></li>
                     <li><a href="#cards">Cards</a></li>
                     <li><a href="#navigations">Navigations</a></li>
                     <li><a href="#grid-system">Grid System</a></li>
@@ -186,7 +187,23 @@
         </div>
    </div>
 
-
+   <div class="view-window-small display-flex flex-align-center flex-justify-center" style="background-image:url(../lib/img/glitter-background.jpg);">
+        <div class="card section rainbow" id="view-window">
+            <a href="#top"><h2>View Window</h2></a>
+        </div>
+    </div>
+    <div class="container">
+        <div class="card soft">
+            <h3>Landing Page Header:</h3>
+        </div>
+    </div>
+    <div class="view-window" style="background-image:url(../lib/img/teddyCover.jpg);">
+        <div class="grid">
+            <div class="col-xs-12 col">
+                <h1>Welcome to AbbyDazzled Designs!</h1>
+            </div>
+        </div>
+    </div>
    
     <div class="view-window-small display-flex flex-align-center flex-justify-center" style="background-image:url(../lib/img/glitter-background.jpg);">
         <div class="card section rainbow" id="cards">
@@ -902,13 +919,13 @@
                 <div class="grid gap">
                     <div class="col-xs-12 col-md-6">
                     <figure class="figure">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>Figure caption</figcaption>
                     </figure>
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <figure class="figure">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>Figure caption</figcaption>
                     </figure>
                 </div>
@@ -919,7 +936,7 @@
             <div class="grid gap">
                 <div class="col-xs-12 col-md-3">
                     <figure class="figure product">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="product-price">$9.99</div>
                             <div class="product-title">Notebook - 4 in. by 6 in.</div>
@@ -929,7 +946,7 @@
                 </div>
                 <div class="col-xs-12 col-md-3">
                     <figure class="figure product">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="product-price">$3.99</div>
                             <div class="product-title">Product Name</div>
@@ -939,7 +956,7 @@
                 </div>
                 <div class="col-xs-12 col-md-3">
                     <figure class="figure product">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="product-price">$3.99</div>
                             <div class="product-title">Product Name</div>
@@ -949,7 +966,7 @@
                 </div>
                 <div class="col-xs-12 col-md-3">
                     <figure class="figure product">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="product-price">$3.99</div>
                             <div class="product-title">Product Name</div>
@@ -964,7 +981,7 @@
             <div class="grid gap">
                 <div class="col-xs-12 col-md-4">
                     <figure class="figure product-overlay">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="caption-body">
                                 <div class="product-price">$3.99</div>
@@ -976,7 +993,7 @@
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <figure class="figure product-overlay">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="caption-body">
                                 <div class="product-price">$3.99</div>
@@ -988,7 +1005,7 @@
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <figure class="figure product-overlay">
-                        <img src="../img/logoColor.png" alt="">
+                        <img src="../img/logoColor.png" alt="AbbyDazzled Logo">
                         <figcaption>
                             <div class="caption-body">
                                 <div class="product-price">$3.99</div>
