update product pages and parts

--- a/chipman.abigail/styleguide/index.html
+++ b/chipman.abigail/styleguide/index.html
@@ -198,11 +198,26 @@
         </div>
     </div>
     <div class="view-window" style="background-image:url(../lib/img/teddyCover.jpg);">
-        <div class="grid">
-            <div class="col-xs-12 col">
-                <h1>Welcome to AbbyDazzled Designs!</h1>
-            </div>
+        <div class="container">
+            <h2 class="page-head">Welcome to AbbyDazzled Designs!</h2>
         </div>
+    </div>
+    <div class="container">
+        <div class="card soft">
+            <h3>Page Header:</h3>
+        </div>
+    </div>
+
+    <div class="view-window-small display-flex flex-align-center flex-justify-center" style="background-image:url(../lib/img/glitter-background.jpg);">
+        <div class="card section rainbow">
+            <h2>This is a Section</h2>
+        </div>
+    </div>
+
+    <div class="display-flex">
+        <div class="flex-stretch"></div>
+        <div class="form-control flex-none"><a href="#top" class="form-button">Back to Top</a></div>
+        <div class="flex-stretch"></div>
     </div>
    
     <div class="view-window-small display-flex flex-align-center flex-justify-center" style="background-image:url(../lib/img/glitter-background.jpg);">
