--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -38,7 +38,7 @@
 
 
 <!-- ** Table of Contents ** -->
-<div class="container" id="tableofcontents">
+<div class="container" id="tableofcontents" style="margin-top: 1.5rem;">
     <div class="display-block card">
         <h3>Table of Contents</h3>
         <ul>
